gnomad-ingress/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnomad-ingress
  labels:
    tier: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gnomad-prod-global-ip
    networking.gke.io/managed-certificates: gnomad-prod-certificate
    networking.gke.io/v1beta1.FrontendConfig: 'gnomad-frontend-config'
spec:
  rules:
    - host: gnomad.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: reads-bluegreen-active
                port:
                  number: 80
            path: /reads
            pathType: ImplementationSpecific
          - backend:
              service:
                name: reads-bluegreen-active
                port:
                  number: 80
            path: /reads/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: reads-bluegreen-preview
                port:
                  number: 80
            path: /preview-reads
            pathType: ImplementationSpecific
          - backend:
              service:
                name: reads-bluegreen-preview
                port:
                  number: 80
            path: /preview-reads/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /blog
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /blog/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /news
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /news/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-browser
                port:
                  number: 80
            pathType: ImplementationSpecific
